[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Monster.gd" type="Script" id=1]
[ext_resource path="res://assets/monster_sprites/enemy_test/sprite_EnemyTest2.png" type="Texture" id=2]
[ext_resource path="res://util/AI_Manager.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/monster_sprites/enemy_test/sprite_EnemyTest3.png" type="Texture" id=4]
[ext_resource path="res://assets/monster_sprites/enemy_test/sprite_EnemyTest0.png" type="Texture" id=5]
[ext_resource path="res://assets/monster_sprites/enemy_test/sprite_EnemyTest1.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 64 )

[node name="Monster" type="KinematicBody2D"]
input_pickable = true
collision_layer = 2
collision_mask = 37
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true
centered = false

[node name="AI_Manager" parent="." instance=ExtResource( 3 )]

[node name="Visibility" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="DetectionShape" type="CollisionShape2D" parent="Visibility"]
visible = false
position = Vector2( 64, 64 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 64, 64 )
shape = SubResource( 3 )
[connection signal="mouse_entered" from="." to="." method="_on_Character_mouse_entered"]
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
